New: Stop ongoing search tasks Fix: SMS messages were not being sent Improve: Update tool versions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,65 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">CoolSocket</string>
-    <string name="edit_template">Edit template</string>
-    <string name="cancel">Cancel</string>
-    <string name="save">Save</string>
-    <string name="error_template_empty">Template can\'t be empty</string>
-    <string name="msg_success_template_add">Added to list</string>
-    <string name="title_template_add">Add new template</string>
-    <string name="add">Add</string>
-    <string name="error_send_message">Message couldn\'t be delivered</string>
-    <string name="error_send_message_internal">Send error: %s</string>
-    <string name="msg_success_json_register">JSON data is registered. Holding index %d</string>
-    <string name="error_json_parse">JSON cannot be parsed</string>
-    <string name="info_mode_json">enter json here…</string>
-    <string name="info_mode_text">enter text here…</string>
-    <string name="menu_title_json_editor">%d JSON</string>
-    <string name="error_send_msg_connection">Something went wrong while sending your message: (error) %s</string>
-    <string name="error_title_send_msg">Send failed</string>
-    <string name="msg_success_template_load">%d template(s) added</string>
-    <string name="msg_success_json_register_new" formatted="false">holding %d, key \'%s\', value \'%s\'</string>
-    <string name="title_mode_json">JSON Mode</string>
-    <string name="title_mode_text">Text Mode</string>
-    <string name="msg_success_clipboard_copy">Text copied to clipboard</string>
-    <string name="pair_finder">Pair finder</string>
-    <string name="template_list">Template list</string>
+    <string name="text_appName">CoolSocket</string>
+    <string name="text_editTemplate">Edit template</string>
+    <string name="butn_cancel">Cancel</string>
+    <string name="butn_save">Save</string>
+    <string name="mesg_templateEmptyError">Template can\'t be empty</string>
+    <string name="mesg_successTemplateAdded">Added to list</string>
+    <string name="text_addTemplate">Add new template</string>
+    <string name="butn_add">Add</string>
+    <string name="mesg_sendMessageError">Message couldn\'t be delivered</string>
+    <string name="mesg_sendMessageErrorInternal">Send error: %s</string>
+    <string name="mesg_jsonRegistered">JSON data is registered. Holding index %d</string>
+    <string name="mesg_jsonParseError">JSON cannot be parsed</string>
+    <string name="text_enterTextJson">enter json here…</string>
+    <string name="text_enterTextNormal">enter text here…</string>
+    <string name="butn_jsonIndex">%d JSON</string>
+    <string name="mesg_sendMessageConnectionError">Something went wrong while sending your message: (error) %s</string>
+    <string name="text_failedToSend">Send failed</string>
+    <string name="mesg_templatesLoaded">%d template(s) added</string>
+    <string name="mesg_jsonRegisteredInfo" formatted="false">holding %d, key \'%s\', value \'%s\'</string>
+    <string name="butn_jsonMode">JSON Mode</string>
+    <string name="butn_textMode">Text Mode</string>
+    <string name="mesg_textCopiedToClipboard">Text copied to clipboard</string>
+    <string name="text_peerFinder">Peer finder</string>
+    <string name="text_templateList">Template list</string>
     <string name="json">JSON</string>
-    <string name="clear_list">Clear list</string>
-    <string name="about">About</string>
-    <string name="close">Close</string>
-    <string name="title_about">About CoolSocket</string>
-    <string name="msg_about_sentence_one">This application is developed to test Genonbeta CoolSocket API</string>
-    <string name="msg_about_sentence_two">CoolSocket API provides fast communication mechanism</string>
-    <string name="msg_about_sentence_three">This CoolSocket application is developed by love and with a couple of developers</string>
-    <string name="msg_pairlist_no_device">No pair was found</string>
-    <string name="scan_peers">Scan peers</string>
-    <string name="msg_templatelist_no_template">No template</string>
-    <string name="add_template">Add template</string>
-    <string name="edit_templates">Edit templates</string>
-    <string name="delete_template">Delete template</string>
-    <string name="msg_edit_template_selected_count">%d selected</string>
-    <string name="error_template_exist">Same template is already exists</string>
-    <string name="msg_scan_start">Scan started</string>
-    <string name="msg_scan_running">Still scanning. When it ends, list will be refreshed</string>
-    <string name="msg_json_apply_format">enter as \'key value\'</string>
-    <string name="title_json_editor">JSON Index</string>
+    <string name="butn_clearList">Clear list</string>
+    <string name="butn_about">About</string>
+    <string name="butn_close">Close</string>
+    <string name="text_about">About CoolSocket</string>
+    <string name="text_aboutSentenceFirst">This application is developed to test Genonbeta CoolSocket API</string>
+    <string name="text_aboutSentenceSecond">CoolSocket API provides fast communication mechanism</string>
+    <string name="text_aboutSentenceThird">This CoolSocket application is developed by love and with a couple of developers</string>
+    <string name="mesg_noPeers">No peers</string>
+    <string name="butn_scanPeers">Scan peers</string>
+    <string name="mesg_noTemplate">No template</string>
+    <string name="butn_addTemplate">Add template</string>
+    <string name="butn_editTemplates">Edit templates</string>
+    <string name="butn_deleteTemplates">Delete template</string>
+    <string name="text_selected">%d selected</string>
+    <string name="mesg_templateExistsError">Same template is already exists</string>
+    <string name="mesg_scanStarted">Scan started</string>
+    <string name="mesg_cancellingScanProcess">Cancelling current scan process</string>
+    <string name="mesg_jsonFormatInfo">enter in \'key value\' format</string>
+    <string name="text_jsonIndexEditor">JSON Index</string>
     <string name="msg_json_editor_list_empty">It\'s empty</string>
-    <string name="json_editor_button_remove_all">Remove all</string>
-    <string name="add_server">Add server</string>
-    <string name="edit_server">Edit server</string>
-    <string name="error_server_exist">The server name you entered is already used. Enter something different</string>
-    <string name="error_empty_field">All fields has to be filled</string>
-    <string name="delete_server">Delete server</string>
-    <string name="edit_servers">Edit servers</string>
-    <string name="enter_server">enter server…</string>
-    <string name="enter_port">enter port…</string>
-    <string name="server_not_actual">This is not an actual server</string>
-    <string name="server_title">Server title</string>
-    <string name="server_address">Server address</string>
-    <string name="server_not_found">Server not found</string>
-    <string name="json_editor_button_edit">Edit</string>
-    <string name="title_json_editor_edit">Edit JSON Index</string>
-    <string name="empty_response">empty response</string>
-    <string name="error_enable_sms_permission">You should permit the app to send SMS in the settings</string>
+    <string name="butn_removeAll">Remove all</string>
+    <string name="butn_addServer">Add server</string>
+    <string name="butn_editServer">Edit server</string>
+    <string name="mesg_serverExistError">The server name you entered is already used. Enter something different</string>
+    <string name="mesg_emptyFieldError">All fields should be filled</string>
+    <string name="butn_deleteServer">Delete server</string>
+    <string name="butn_editServers">Edit servers</string>
+    <string name="text_enterServerAddress">address / template id</string>
+    <string name="text_enterPort">enter port</string>
+    <string name="mesg_notActualServerError">Not an actual server</string>
+    <string name="text_serverTitle">Server title</string>
+    <string name="text_serverAddress">Server address</string>
+    <string name="mesg_serverNotFound">Server not found</string>
+    <string name="butn_edit">Edit</string>
+    <string name="text_editJsonIndex">Edit JSON Index</string>
+    <string name="text_emtyResponse">empty response</string>
+    <string name="mesg_smsPermissionsError">To send SMS and receive properly, you should give access to SMS and Phone permissions</string>
 </resources>
